# SceneGraphRobot

./: .gitignore  CMakeLists.txt  README.md
include/: Robot.h  SceneNode.h  ShaderSources.h
include/glad/: glad.h
src/: Robot.cpp  SceneNode.cpp  glad.c  main.cpp
